--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h2>Student Web Developer</h2>
     <hr />
     <h2>
-      <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"
+      <a href="./public/movie-ranking.html"
         >Movie Ranking Project</a>
     </h2> 
     <img src=".//assets/images/movie-ranking.png" alt="Project Preview" height="300">   
 
     <h2>
-        <a href="../4.3 HTML Porfolio Project/public/birthday-invite.html"
+        <a href="./public/birthday-invite.html"
         >Birthday Invite Project</a>        
     </h2>
-    <img src="../4.3 HTML Porfolio Project/assets/images/birthday-invite.png" alt="Preview" height="300">
+    <img src="./assets/images/birthday-invite.png" alt="Preview" height="300">
     
     <hr/>
-    <a href="../4.3 HTML Porfolio Project/public/about.html">About Me </a>
-    <a href="../4.3 HTML Porfolio Project/public/contact.html"> Contact Me</a>
+    <a href="./public/about.html">About Me </a>
+    <a href="./public/contact.html"> Contact Me</a>
     
 
   </body>
